--- a/modularized/web/templates/base.html
+++ b/modularized/web/templates/base.html
@@ -53,7 +53,7 @@
                 </li>
                 {% endif %}
                 {% else %}
-                <li class="ps-3 text-muted"><em>No cameras</em></li>
+                <li class="ps-3"><em>No cameras</em></li>
                 {% endif %}
                 {% endfor %}
             </ul>
@@ -108,7 +108,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userProfileDropdown">
                                 </ul>
                             </div>
-                            <div class="nav-item">
+                            <div class="nav-item d-flex align-items-center">
                                 <a href="{{ url_for('logout') }}" class="nav-link d-flex align-items-center"
                                     title="Logout">
                                     <i class="fa-solid fa-right-from-bracket"></i>
