--- a/modularized/web/templates/base.html
+++ b/modularized/web/templates/base.html
@@ -38,7 +38,7 @@
                                 </a>
 
                                 {# Admin buttons #}
-                                {% if session.get('role') == 'admin' %}
+                                {% if cam_management %}
                                     {# Edit camera #}
                                     <a href="{{ url_for('edit_camera', camera_id=camera.camera_id) }}?camera={{ camera.camera_name }}&lab={{ lab.lab_name }}"
                                        class="ms-2 icon-pencil" title="Edit">
@@ -59,7 +59,7 @@
 
                     {# Add button for camera. #}
                     {# Check if user is admin #}
-                    {% if session.get('role') == 'admin' %}
+                    {% if cam_management %}
                         <li class="ps-3 mt-1" > 
                             <a data-bs-toggle="modal" data-bs-target="#addCameraModal"
                                class="text-decoration-none icon-plus">
@@ -130,6 +130,17 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+                    {% if user_management %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item ms-5 me-2">
+                            <a class="nav-link active" aria-current="page" href="{{ url_for('user_management') }}">User Management</a>
+                        </li>
+                        <li class="nav-item me-2">
+                            <a class="nav-link active" aria-current="page" href="{{ url_for('role_management') }}">Role Management</a>
+                        </li>
+                    </ul>
+                    {% endif %}
+
                     <div class="navbar-nav ms-auto">
                         {% if session['logged_in'] %}
                             <div class="nav-item dropdown">
@@ -141,7 +152,6 @@
                                     {% set first = '' %}
                                     {% set rest = '' %}
                                 {% endif %}
-
 
                                 <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                                    id="userProfileDropdown" role="button" data-bs-toggle="dropdown"
