link create account page

--- a/modularized/web/templates/edit_camera.html
+++ b/modularized/web/templates/edit_camera.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="alert alert-info">
+<div class="alert alert-info mt-4">
   <i class="fa-solid fa-info-circle"></i> <strong>Admin Access:</strong> Only administrators can modify camera settings.
 </div>
 
