--- a/modularized/web/templates/create_account.html
+++ b/modularized/web/templates/create_account.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="alert alert-info">
+<div class="alert alert-info mt-4">
   <i class="fa-solid fa-info-circle"></i> <strong>Create New Account:</strong> Only users with user management permission can access this page.
 </div>
 
