added update role permissions

--- a/modularized/web/templates/base.html
+++ b/modularized/web/templates/base.html
@@ -130,7 +130,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                    {% if user_management %}
+                    {% if user_role_management %}
 
                     <ul class="navbar-nav ms-4">
                         <li class="nav-item dropdown">
