--- a/modularized/web/templates/user_management.html
+++ b/modularized/web/templates/user_management.html
@@ -18,7 +18,7 @@
               <th scope="col">Username</th>
               <th scope="col">Email</th>
               <th scope="col">Role</th>
-              {% if user_management %}
+              {% if user_role_management %}
                 <th scope="col">Actions</th>
               {% endif %}
           </tr>
@@ -30,7 +30,7 @@
                   <td>{{ user.username }}</td>
                   <td>{{ user.email }}</td>
                   <td>{{ user.role }}</td>
-                  {% if user_management %}
+                  {% if user_role_management %}
                     <td class="row">
                         <form class="col" method="POST" action="{{ url_for('user_management', delete=0, update=1) }}" onsubmit="return confirm('Are you sure you want to update this role?');">
                           <input type="hidden" name="user_id" value="{{ user.id }}">
