--- a/modularized/web/templates/role_management.html
+++ b/modularized/web/templates/role_management.html
@@ -33,6 +33,7 @@
 
   <!-- Permission Matrix Table -->
   <form method="post" action="{{ url_for('role_management') }}">
+    <input type="hidden" name="action" value="update">
     <div class="table-responsive">
       <table class="table table-bordered text-center">
         <thead>
@@ -41,7 +42,6 @@
             {% for perm in permissions %}
               <th>{{ perm['name'] }}</th>
             {% endfor %}
-            <th>Delete Role</th>
           </tr>
         </thead>
         <tbody>
@@ -54,37 +54,48 @@
                       name="role_perm_{{ role['name'] }}_{{ perm['name'] }}"
                       {% if (role['id'], perm['id']) in role_permissions %}
                         checked
-                      {% endif %}
-                      >
+                      {% endif %}>
                 </td>
               {% endfor %}
-
-              <td>
-                {% if role['name'] != "admin" and role['name'] != "user" %}
-                <form method="post" action="{{ url_for('role_management') }}" style="display:inline;">
-                  <input type="hidden" name="action" value="delete">
-                  <input type="hidden" name="role_id" value="{{ role['id'] }}">
-                  <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('WARNING: Are you sure you want to delete this role?');">
-                    Delete
-                  </button>
-                </form>
-                {% endif %}
-              </td>
             </tr>
           {% endfor %}
-
         </tbody>
       </table>
     </div>
-    <input type="hidden" name="action" value="update">
     <button type="submit" class="btn btn-success mt-3" onclick="return confirm('Are you sure you want to save permission changes?');">Save Changes</button>
   </form>
-
   <button type="button" class="btn btn-secondary mt-3">
     <a class="link-light link-offset-2 link-underline-opacity-0 link-underline-opacity-0-hover" href="{{ url_for('role_management') }}">
       Revert
     </a>
   </button>
+
+  <table class="table table-bordered text-center">
+    <thead>
+      <tr>
+        <th>Role \ Action</th>
+        <th>Delete Role</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+      {% for role in roles %}
+        {% if role['name'] != "admin" and role['name'] != "user" %}
+        <td>{{ role['name'] }}</td>
+        <td>
+          <form method="post" action="{{ url_for('role_management') }}">
+            <input type="hidden" name="action" value="delete">
+            <input type="hidden" name="role_name" value="{{ role['name'] }}">
+            <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('WARNING: Are you sure you want to delete this role?');">
+              Delete
+            </button>
+          </form>
+        </td>
+        {% endif %}
+      {% endfor %}
+      </tr>
+    </tbody>
+  </table>
   {% else %}
     <p>No roles found.</p>
   {% endif %}
