--- a/modularized/web/templates/role_management.html
+++ b/modularized/web/templates/role_management.html
@@ -70,7 +70,7 @@
     </a>
   </button>
 
-  <table class="table table-bordered text-center">
+  <table class="table table-bordered text-center mt-4">
     <thead>
       <tr>
         <th>Role \ Action</th>
