added some basic validation and sanitization

--- a/modularized/web/templates/role_management.html
+++ b/modularized/web/templates/role_management.html
@@ -73,7 +73,7 @@
   <table class="table table-bordered text-center mt-4">
     <thead>
       <tr>
-        <th>Role \ Action</th>
+        <th>Role</th>
         <th>Delete Role</th>
       </tr>
     </thead>
