--- a/modularized/web/templates/index.html
+++ b/modularized/web/templates/index.html
@@ -25,9 +25,9 @@
             <label for="object_type" class="form-label">In-Compliance Type:</label>
             <select name="object_type" class="form-select rounded-pill">
                 <option value="">Select Type</option>
-                <option value="Food / Drink">Food / Drink</option>
-                <option value="Mask">Mask</option>
-                <option value="Unauthorized Access">Unauthorized Access</option>
+                {% for class_id, label in all_labels.items() %}
+                    <option value="{{ class_id }}">{{ label }}</option>
+                {% endfor %}
             </select>
         </div>
 
