--- a/modularized/web/templates/index.html
+++ b/modularized/web/templates/index.html
@@ -18,7 +18,12 @@
     <form method="post" class="row g-3 align-items-end mb-4">
         <div class="col-md-6">
             <label for="date" class="form-label">Date Time:</label>
-            <input type="date" class="form-control rounded-pill" name="date" id="date" value="{{ today }}">
+            <input type="date"
+                   class="form-control rounded-pill"
+                   name="date"
+                   id="date"
+                   value="{{ selected_date }}"
+            >
         </div>
 
         <div class="col-md-6">
@@ -26,7 +31,9 @@
             <select name="object_type" class="form-select rounded-pill">
                 <option value="">Select Type</option>
                 {% for class_id, label in all_labels.items() %}
-                    <option value="{{ class_id }}">{{ label }}</option>
+                    <option value="{{ class_id }}" {% if selected_object_type == class_id|string %}selected{% endif %}>
+                        {{ label }}
+                    </option>
                 {% endfor %}
             </select>
         </div>
