--- a/modularized/web/static/css/style.css
+++ b/modularized/web/static/css/style.css
@@ -6,7 +6,10 @@ body, html {
 
 #wrapper {
     display: flex;
-    height: 100vh;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    position: relative;
 }
 
 #sidebar {
