--- a/modularized/web/templates/user_management.html
+++ b/modularized/web/templates/user_management.html
@@ -6,6 +6,7 @@
 </div>
 
 <h1>User Management</h1>
+<h3>NOTE: Deleting user will also remove all cameras created by that user.</h3>
 <button class="btn btn-primary my-3" >
   <a class="text-light" href="{{ url_for('create_account') }}">Create Account</a>
 </button>
