--- a/modularized/web/templates/user_management.html
+++ b/modularized/web/templates/user_management.html
@@ -6,62 +6,68 @@
 </div>
 
 <h1>User Management</h1>
-<h3>NOTE: Deleting user will also remove all cameras created by that user.</h3>
-<button class="btn btn-primary my-3" >
-  <a class="text-light" href="{{ url_for('create_account') }}">Create Account</a>
-</button>
 
-{% if users %}
-  <table class="table">
-      <thead>
-          <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Username</th>
-              <th scope="col">Email</th>
-              <th scope="col">Role</th>
-              {% if user_role_management %}
-                <th scope="col">Actions</th>
-              {% endif %}
-          </tr>
-      </thead>
-      <tbody>
-          {% for user in users %}
-              <tr>
-                  <td>{{ user.id }}</td>
-                  <td>{{ user.username }}</td>
-                  <td>{{ user.email }}</td>
-                  <td>{{ user.role }}</td>
-                  {% if user_role_management %}
-                    <td class="row">
-                        <form class="col" method="POST" action="{{ url_for('user_management') }}" onsubmit="return confirm('Are you sure you want to update this role?');">
-                          <input type="hidden" name="action" value="update">
-                          <input type="hidden" name="user_id" value="{{ user.id }}">
-                          <select name="new_role" class="form-select form-select-sm d-inline w-auto">
-                              {% for role in roles %}
-                                  <option value="{{ role.name }}"
-                                      {% if role.name == user.role %}
-                                        selected
-                                      {% endif %}>
-                                      {{ role.name }}
-                                  </option>
-                              {% endfor %}
-                          </select>
-                          <button type="submit" class="btn btn-sm btn-primary">Update</button>
-                        </form>
-                        <!-- Delete user form -->
-                        <form class="col" method="POST" action="{{ url_for('user_management') }}" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                          <input type="hidden" name="user_id" value="{{ user.id }}">
-                          <input type="hidden" name="action" value="delete">
-                          <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </td> 
-                  {% endif %}
-              </tr>
-          {% endfor %}
-      </tbody>
-  </table>
+{% if user_role_management %}
+  <h3>NOTE: Deleting user will also remove all cameras created by that user.</h3>
+  <button class="btn btn-primary my-3" >
+    <a class="text-light" href="{{ url_for('create_account') }}">Create Account</a>
+  </button>
+
+  {% if users %}
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Username</th>
+                <th scope="col">Email</th>
+                <th scope="col">Role</th>
+                {% if user_role_management %}
+                  <th scope="col">Actions</th>
+                {% endif %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for user in users %}
+                <tr>
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.role }}</td>
+                    {% if user_role_management %}
+                      <td class="row">
+                          <form class="col" method="POST" action="{{ url_for('user_management') }}" onsubmit="return confirm('Are you sure you want to update this role?');">
+                            <input type="hidden" name="action" value="update">
+                            <input type="hidden" name="user_id" value="{{ user.id }}">
+                            <select name="new_role" class="form-select form-select-sm d-inline w-auto">
+                                {% for role in roles %}
+                                    <option value="{{ role.name }}"
+                                        {% if role.name == user.role %}
+                                          selected
+                                        {% endif %}>
+                                        {{ role.name }}
+                                    </option>
+                                {% endfor %}
+                            </select>
+                            <button type="submit" class="btn btn-sm btn-primary">Update</button>
+                          </form>
+                          <!-- Delete user form -->
+                          <form class="col" method="POST" action="{{ url_for('user_management') }}" onsubmit="return confirm('Are you sure you want to delete this user?');">
+                            <input type="hidden" name="user_id" value="{{ user.id }}">
+                            <input type="hidden" name="action" value="delete">
+                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                          </form>
+                      </td> 
+                    {% endif %}
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+  {% else %}
+      <p>No users found.</p>
+  {% endif %}
+
 {% else %}
-    <p>No users found.</p>
+  <p>Not enough permissions. Access denied.</p>
 {% endif %}
 
 {% endblock %}
