minor changes to ui

--- a/modularized/web/templates/labs.html
+++ b/modularized/web/templates/labs.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <h1>Labs Management</h1>
+<i class="fa-solid fa-info-circle my-3"></i> Note: Lab names must be unique.
 
 {% if cam_management %}
 
