--- a/modularized/web/templates/role_management.html
+++ b/modularized/web/templates/role_management.html
@@ -28,7 +28,7 @@
 
   {% if roles %}
 
-  <i class="fa-solid fa-info-circle my-3"></i> Admin and user role are default roles and cannot be deleted.
+  <i class="fa-solid fa-info-circle my-3"></i> Admin and user are default roles and cannot be deleted.
 
   <!-- Permission Matrix Table -->
   <form method="post" action="{{ url_for('role_management') }}">
