--- a/modularized/web/templates/base.html
+++ b/modularized/web/templates/base.html
@@ -37,6 +37,12 @@
                                     {{ camera.camera_name }}
                                 </a>
 
+                                {# Second Compliance link; visible to all users #}
+                                <a href="{{ url_for('second_compliance', lab=lab.lab_name, camera=camera.camera_name) }}"
+                                   class="ms-2 icon-warning text-warning" title="Second Compliance">
+                                    <i class="fa-solid fa-rotate-right"></i>
+                                </a>
+
                                 {# Admin buttons #}
                                 {% if cam_management %}
                                     {# Edit camera #}
@@ -60,44 +66,50 @@
                     {# Add button for camera. #}
                     {# Check if user is admin #}
                     {% if cam_management %}
-                        <li class="ps-3 mt-1" > 
+                        <li class="ps-3 mt-1">
                             <a data-bs-toggle="modal" data-bs-target="#addCameraModal"
                                class="text-decoration-none icon-plus">
-                            <i class="fa-solid fa-circle-plus"></i>
-                        </a>
+                                <i class="fa-solid fa-circle-plus"></i>
+                            </a>
                         </li>
                         <!-- Add Camera Modal -->
-                        <div class="modal" id="addCameraModal" tabindex="-1" aria-labelledby="addCameraModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="addCameraModalLabel">Add New Camera</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
+                        <div class="modal" id="addCameraModal" tabindex="-1" aria-labelledby="addCameraModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="addCameraModalLabel">Add New Camera</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
 
-                            <div class="modal-body">
-                                <p>Input IP Address of Camera and press the search icon to check if IP address exists in NVR.</p>
-                                <!-- Input IP address -->
-                                <div class="input-group">
-                                    <input type="text" class="form-control" id="cameraInput" placeholder="Enter Camera IP Address">
-                                    <button class="btn btn-outline-secondary" type="button" id="validateCameraBtn">
-                                        <span id="searchIcon">🔍</span>
-                                    </button>
+                                    <div class="modal-body">
+                                        <p>Input IP Address of Camera and press the search icon to check if IP address
+                                            exists in NVR.</p>
+                                        <!-- Input IP address -->
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" id="cameraInput"
+                                                   placeholder="Enter Camera IP Address">
+                                            <button class="btn btn-outline-secondary" type="button"
+                                                    id="validateCameraBtn">
+                                                <span id="searchIcon">🔍</span>
+                                            </button>
+                                        </div>
+                                        <!-- Validation result message -->
+                                        <div id="cameraValidationMessage" class="mt-2 text-danger"></div>
+                                    </div>
+
+                                    <input type="hidden" id="deviceInfoData"/>
+
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary" id="addCameraBtn" disabled>
+                                            Add Camera
+                                        </button>
+                                    </div>
                                 </div>
-                                <!-- Validation result message -->
-                                <div id="cameraValidationMessage" class="mt-2 text-danger"></div>
                             </div>
-
-                            <input type="hidden" id="deviceInfoData" />
-
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary" id="addCameraBtn" disabled>
-                                    Add Camera
-                                </button>
-                            </div>
-                            </div>
-                        </div>
                         </div>
                     {% endif %}
 
@@ -132,24 +144,29 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                     {% if user_role_management %}
-                    <ul class="navbar-nav ms-4">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Security
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
-                                </svg>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item">
-                                    <a class="dropdown-item" aria-current="page" href="{{ url_for('user_management') }}">User Management</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" aria-current="page" href="{{ url_for('role_management') }}">Role Management</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                        <ul class="navbar-nav ms-4">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    Security
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-chevron-down" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
+                                    </svg>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" aria-current="page"
+                                           href="{{ url_for('user_management') }}">User Management</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" aria-current="page"
+                                           href="{{ url_for('role_management') }}">Role Management</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                     {% endif %}
 
                     {% if cam_management %}
@@ -210,12 +227,13 @@
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     <div class="mt-3">
-                    {% for category, message in messages %}
-                        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    {% endfor %}
+                        {% for category, message in messages %}
+                            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                                {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
+                            </div>
+                        {% endfor %}
                     </div>
                 {% endif %}
             {% endwith %}
